# c4-model

./: Marketplace.hs  README.md  cabal.project  default.nix  haskell.nix  shell.nix
c4-model/: CHANGELOG.md  LICENSE  c4-model.cabal
c4-model/src/C4/: Model.hs
c4-model/src/C4/Model/: PlantUML.hs
marketplace-examples/: marketplace-examples.cabal
marketplace-examples/app/: Main.hs
marketplace-examples/src/Marketplace/: API.hs  Diagram.hs  Model.hs  Web.hs
marketplace-examples/tests/: Main.hs
marketplace-examples/tests/golden/: create vendor and app.puml  create vendor.puml  trivial.puml
nix/: default.nix  pkgs.nix
nix/.plan.nix/: c4-model.nix  dataflow.nix  marketplace-examples.nix
