cabal-version:       >=1.10
name:                c4-model
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Brian McKenna
maintainer:          brian@brianmckenna.org
category:            Graphics
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     C4.Model
                     , C4.Model.PlantUML
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.11 && <4.16
                     , containers >=0.5 && <0.7
                     , text >=1.2 && <1.3
                     , lens >=4.18 && <5.1
  hs-source-dirs:      src
  default-language:    Haskell2010
